WIP - Adding ejb-module tests
Signed-off-by: VandeJr <vanderlei.jordao.jr@outlook.com>